[package]
name = "kurl"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Simple CLI HTTP client focused on security research"
homepage = "https://github.com/gbrls/kurl"
repository = "https://github.com/gbrls/kurl"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["http", "security"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json", "native-tls"]}
clap = {version = "4.1", features = ["derive"]}
serde_json = "1.0"
colored = "2.0"
xmltree = "0.10"
itertools = "0.10.5"
anyhow = "1.0.70"
thiserror = "1.0"
